3.0 correcoes gerais